5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_1053.log
== TEST (2019-04-03 19:16:27) 
-- CODE:
nome_do_patrono = input(" ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 6
    print(nao eh patrono do Harry Potter)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:16:59) 
-- CODE:
nome_do_patrono = input(" ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.128989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:17:03) 
-- CODE:
nome_do_patrono = input(" ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:17:18) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:17:23) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono: ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:17:55) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono: ")

if (nome_do_patrono = cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome_do_patrono = cervo):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:18:04) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono: ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:19:47) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono: ")

if (nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:20:07) 
-- CODE:
nome_do_patrono = input("Digite o nome do patrono: ")

if(nome_do_patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome_do_patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:20:43) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:21:03) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:50:56) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.203009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:51:12) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:51:16) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.147971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:51:20) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:51:26) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if (var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:51:43) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:51:45) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.179789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:38:46) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:58:03) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:58:12) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:17:37) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:18:08) 
-- CODE:
var1 = input("Digite o nome do patrono: "
var2 = cervo

if(var1==var2):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    var2 = cervo
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:18:20) 
-- CODE:
var1 = input("Digite o nome do patrono: ")
var2 = cervo

if(var1==var2):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:18:51) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:32) 
-- CODE:
var1 = input("Digite o nome do patrono: ")
var2 = input("cervo")
if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:38) 
-- CODE:
var1 = input("Digite o nome do patrono: ")
var2 = input("cervo")
if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:22:04) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(var1 == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:20) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:23:31) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.205254
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:34) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:14) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + ("nao eh patrono do Harry Potter"))

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:33) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + ("nao eh patrono do Harry Potter"))

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:12) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 +("nao eh patrono do Harry Potter"))

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:23) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1("nao eh patrono do Harry Potter"))

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:35) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:04) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print("var" + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:12) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:26:47) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:29:05) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + " nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:15) 
-- CODE:
var1 = input("Digite o nome do patrono: ")

if(var1 == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(var1 + " nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.223654
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
